[project]
name = "ha-pyscript-automations"
version = "1.0.0"
description = "Home Assistant automations with testable PyScript actions"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: full-stack docker integration tests (slow, opt-in; run with 'pytest -m docker')",
]
# Exclude docker tests from the default run. tests/run_all.py
# uses tests_dir.glob('test_*.py'), which is non-recursive, so
# it never discovers tests/docker/test_*.py either way.
addopts = "-m 'not docker'"

[tool.ruff]
line-length = 80
target-version = "py311"
cache-dir = "/tmp/ruff_cache"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["pyscript/"]
mypy_path = ["pyscript/modules"]
cache_dir = "/tmp/mypy_cache"

[[tool.mypy.overrides]]
module = ["homeassistant.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jinja2", "jinja2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# scripts/zwave_network_info.py bootstraps its own venv for
# these at runtime; the host dev environment may not have them
# installed, and they're unused in the rest of the repo. The
# pyscript bridge module imports socketio lazily under the
# pyscript venv, and the ZRM wrapper imports socketio.exceptions
# to classify bridge-timeout errors.
module = ["socketio", "socketio.exceptions", "aiohttp"]
ignore_missing_imports = true

