[project]
name = "ha-blueprint-toolkit"
version = "1.0.0"
description = "Home Assistant blueprints backed by a testable HA integration"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: full-stack docker integration tests (slow, opt-in; run with 'pytest -m docker')",
]
# Exclude docker tests from the default run. tests/run_all.py
# uses tests_dir.glob('test_*.py'), which is non-recursive, so
# it never discovers tests/docker/test_*.py either way.
addopts = "-m 'not docker'"
# pytest-homeassistant-custom-component (used by
# test_hacc_harness.py) provides an async ``hass`` fixture.
# In auto mode pytest-asyncio adopts each test's coroutine
# without requiring per-test @mark.asyncio decoration; this
# is what HA's own integration repos use. No effect on the
# existing sync tests.
asyncio_mode = "auto"

[tool.ruff]
line-length = 80
target-version = "py311"
cache-dir = "/tmp/ruff_cache"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
# No ``files = [...]`` set: the canonical type check runs
# via each test file's ``TestCodeQuality(CodeQualityBase)``
# class, which installs HA + voluptuous etc. via PEP 723
# inline deps and feeds explicit ``mypy_targets`` to mypy.
# Bare ``uvx mypy`` from a checkout without HA installed
# will not have the type stubs needed to check the
# integration; run ``./tests/run_all.py`` instead.
cache_dir = "/tmp/mypy_cache"

[[tool.mypy.overrides]]
module = ["homeassistant.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jinja2", "jinja2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# scripts/zwave_network_info.py bootstraps its own venv for
# these at runtime; the host dev environment may not have them
# installed. The ZRM bridge module imports socketio lazily,
# and the ZRM handler imports socketio.exceptions to classify
# bridge-timeout errors.
module = ["socketio", "socketio.exceptions", "aiohttp"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# voluptuous is a vendored HA dep; the host dev environment
# may not have it installed. The integration's TEC handler
# uses vol.Schema to validate service-call payloads.
module = ["voluptuous"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# scripts/dev-install.py imports the integration package
# off a runtime sys.path entry built from the deployed
# build dir; the host dev environment does not have the
# blueprint_toolkit package on its default sys.path.
module = ["blueprint_toolkit", "blueprint_toolkit.*"]
ignore_missing_imports = true

